# LanguageAPP

./: .gitignore  README.md  alembic.ini  eng_words.csv  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 0cf42723f3cf_flashcard_words.py  1b2b9a3e32bf_update_theme_palette_choices.py  1ba8bc26bc03_add_wordle_count.py  508493adde6c_create_word_chain_table.py  540bf1beb09b_add_wordle_stats.py  76d677a63d46_init.py  7712acaf18c8_create_users.py  7d15b6434bfe_add_theme_to_users.py  (+12 more)
core/: config.py  database.py  security.py
frontend/: api.js  flashcard.arctic.css  flashcard.css  flashcard.sapphire.css  home.arctic.css  home.sapphire.css  main-app.js  main-auth.js  random.arctic.css  random.css  random.sapphire.css  styles.arctic.css  styles.css  styles.sapphire.css  theme.js  wordchain.arctic.css  wordchain.css  wordchain.sapphire.css  wordle.arctic.css  wordle.css  wordle.js  wordle.sapphire.css
models/: flashcard.py  flashcardWordList.py  randomWordList.py  refresh_token.py  user.py  wordChain.py
repositories/: flashcard_repo.py  flashcard_words_repo.py  random_word_repo.py  refresh_token_repo.py  user_repo.py  wordChain_repo.py  word_repo.py
routers/: auth.py  flashcard.py  translate.py  user.py  wordle_check.py  wordle_random_words.py  words.py
schemas/: auth.py  flashcard.py  settings_user.py  word.py  words.py
services/: auth_services.py  flashcard_service.py  word_services.py  wordle_services.py  words_services.py
templates/: app.html  auth.html  base.html  flashcard.html  home.html  random.html  word_chain.html  wordle.html
(+2 files in other folders)
